# lt_by_python

./: .gitignore  HW5.py  README.md  codewars.py  conftest.py  homework4.py  my_calc.py  pyproject.toml  pytest.ini  test_api_08.py  test_main_page_07.py
Aleg Ch/: lesson_01.py  lesson_01r.py  lesson_02.py  lesson_02r.py  lesson_03.py  lesson_03r.py  lesson_04.py  lesson_04r.py  lesson_05.py  lesson_05r.py  lesson_06.py  lesson_06r.py  my_calc.py  my_file.py  test_main_page_07.py  test_mytest01.py  test_something.py
AlexanderBarkar/: homework3.py  homework4.py
AlexanderBarkar/tests/: test_codewars.py  test_hw4.py
AndreyHerasimchyk/HW/: hw3.py  hw4.py  my_calc.py
AndreyHerasimchyk/HW/test/: test_hw3.py  test_hw4.py
Lipatnikova/: hw_4.py  hw_4_my_calc.py  hw_5.py  user_story.txt
TatianaZimina/: HM2.py  HW4.py  HW5.py  conftest.py  lesson_6.py  my_calc.py  pytest.ini  test_login_page.py  test_main_page.py
TatianaZimina/pages/: base_page.py  locators.py  login_page.py  main_page.py
alex/: codewars.py  homework4.py  homework4_1.py  homework5.py  my_calc.py  normalizer.py
alex/tests/: test_codewars.py  test_hw4.py  test_hw4_1.py  test_normalizer.py
mariia/: conftest.py  lesson1.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  my_calc.py  test_hw6_1.py  test_oscar.py
mariia/pages/: add_to_cart_page.py  base_page.py  locators.py  login_page.py  main_page.py
pages/: base_page.py  locators.py  login_page.py  main_page.py
tests/: test_codewars.py  test_hw4.py  test_main_page_07.py
