[tool.poetry]
name = "lt-by-python"
version = "0.1.0"
description = ""
authors = ["Andrew Gerasimchik <gerasimchick@tut.by>"]
readme = "README.md"
packages = [{include = "lt_by_python"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest = "^7.1.3"
selenium = "^4.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
